Nouveau DESIGN Gestion du nouveau MENU

--- a/src/pages/index/_scenes/_training/_gauges.html
+++ b/src/pages/index/_scenes/_training/_gauges.html
@@ -1,6 +1,9 @@
 <nav id="LAY__Training_Menu_Gauges" class="outputLayer Menu__Layer Training__Menu Training__Menu_Gauges">
+    <ul>
+        <li class="Menu__Title">Gauges settings</li>
+    </ul>
     <ul id="LAY__Training_Menu_Gauges_Player" class="outputLayer">
-        <li class="Training__Menu_Gauges_Number">Player #</li>
+        <li class="Training__Menu_Gauges_Number Menu__Title">Player #</li>
         <li id="LAY__Training_Menu_Gauges_Life_" class="outputLayer --change Training__Button">
             <span>Life</span>
             <span class="outputText --change"></span>
@@ -19,6 +22,6 @@
         </li>
     </ul>
     <ul class="Training__Menu_Gauges_Return">
-        <li id="TXT__Training_Menu_Gauges_Return" class="outputText --uncreate --outputCreated">Return</li>
+        <li id="TXT__Training_Menu_Gauges_Return" class="outputText --uncreate --outputCreated Menu__Button">Return</li>
     </ul>
 </nav>
