--- a/src/pages/index/_scenes/_training/_settings.html
+++ b/src/pages/index/_scenes/_training/_settings.html
@@ -1,11 +1,12 @@
 <nav id="LAY__Training_Menu_Settings" class="outputLayer Menu__Layer Training__Menu Training__Menu_Settings">
     <ul>
-        <li id="TXT__Training_Menu_Settings_Gauges" class="outputText">Gauges Settings</li>
-        <li id="TXT__Training_Menu_Settings_Dummy" class="outputText">Dummy Settings</li>
-        <li id="TXT__Training_Menu_Settings_Restart" class="outputText">Restart Settings</li>
-        <li id="TXT__Training_Menu_Settings_Display" class="outputText">Display Settings</li>
+        <li class="Menu__Title">Training settings</li>
+        <li id="TXT__Training_Menu_Settings_Gauges" class="outputText Menu__Button">Gauges Settings</li>
+        <li id="TXT__Training_Menu_Settings_Dummy" class="outputText Menu__Button">Dummy Settings</li>
+        <li id="TXT__Training_Menu_Settings_Restart" class="outputText Menu__Button">Restart Settings</li>
+        <li id="TXT__Training_Menu_Settings_Display" class="outputText Menu__Button">Display Settings</li>
     </ul>
     <ul>
-        <li id="TXT__Training_Menu_Settings_Return" class="outputText">Return</li>
+        <li id="TXT__Training_Menu_Settings_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
