--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -35,10 +35,10 @@
             <section class="Battle__Menu">
                 <nav id="LAY__Battle_Menu" class="outputLayer Menu__Layer Battle__Menu_Principal">
                     <ul>
-                        <li id="TXT__Battle_Menu_Rematch" class="outputText">Rematch</li>
-                        <li id="TXT__Battle_Menu_Select" class="outputText">Select character</li>
-                        <li id="TXT__Battle_Menu_Stage" class="outputText">Select stage</li>
-                        <li id="TXT__Battle_Menu_Quit" class="outputText">Quit</li>
+                        <li id="TXT__Battle_Menu_Rematch" class="outputText Menu__Button">Rematch</li>
+                        <li id="TXT__Battle_Menu_Select" class="outputText Menu__Button">Select character</li>
+                        <li id="TXT__Battle_Menu_Stage" class="outputText Menu__Button">Select stage</li>
+                        <li id="TXT__Battle_Menu_Quit" class="outputText Menu__Button">Quit</li>
                     </ul>
                 </nav>
                 {% for fw_training in FW.content.training %}
