--- a/src/pages/index/_scenes/loading.html
+++ b/src/pages/index/_scenes/loading.html
@@ -1,17 +1,8 @@
-<section id="CTX__Loading" class="outputContext">
-    <h1>
-        DBZ-Versus
-        <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
+<section id="CTX__Loading" class="outputContext DS-Page">
+    <h1 class="DS-Logo">
+        <b>DBZ</b>
+        <span>Versus</span>
+        <i>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</i>
     </h1>
-    <div class="Loading__Information">
-        <h2>This open source project is still under development !</h2>
-        <p>
-            If you encountered an issue or would like to give me feedback to improve this project,<br/>
-            please contact me via its <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a>.
-        </p>
-        <p>
-            <b>Thank you for playing and have a good game !</b>
-        </p>
-    </div>
     <div id="LAY__LoadingStep" class="outputLayer"></div>
 </section>
