--- a/src/pages/index/_scenes/select.html
+++ b/src/pages/index/_scenes/select.html
@@ -1,5 +1,5 @@
-<section id="CTX__Select" class="outputContext">
-    <h1 id="TXT__Select_Name" class="outputText">Select</h1>
+<section id="CTX__Select" class="outputContext DS-Page">
+    <h1 id="TXT__Select_Name" class="outputText DS-Title">Select</h1>
     <div class="Select__Players">
         <div id="LAY__Select_Player_" class="outputLayer Select__Player">
             <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" height="200" width="200"/>
