--- a/src/pages/index/_scenes/side.html
+++ b/src/pages/index/_scenes/side.html
@@ -1,5 +1,5 @@
-<section id="CTX__Side" class="outputContext">
-    <h1 id="TXT__Side_Name" class="outputText">Side</h1>
+<section id="CTX__Side" class="outputContext DS-Page">
+    <h1 id="TXT__Side_Name" class="outputText DS-Title">Side</h1>
     <div class="Side__Players">
         <div id="LAY__Side_Player_" class="outputLayer Side__Player">
             <h3 id="TXT__Side_Player_State_" class="outputText --change Side__Player_State">Waiting ...</h3>
@@ -8,7 +8,7 @@
         <div id="LAY__Side_Empty" class="outputLayer Side__Empty"></div>
         <div id="LAY__Side_Controller_" class="outputLayer Side__Controller">
             <img class="Side__Controller_Sprite" />
-            <div id="TXT__Side_Controller_" class="outputText --change Side__Controller_Name"></div>
+            <h2 id="TXT__Side_Controller_" class="outputText --change Side__Controller_Name"></h2>
         </div>
     </div>
 </section>
