--- a/src/pages/index/_scenes/stage.html
+++ b/src/pages/index/_scenes/stage.html
@@ -1,5 +1,5 @@
-<section id="CTX__Stage" class="outputContext">
-    <h1 id="TXT__Stage_Name" class="outputText">Stage</h1>
+<section id="CTX__Stage" class="outputContext DS-Page">
+    <h1 id="TXT__Stage_Name" class="outputText DS-Title">Stage</h1>
     <div class="Stage__Stages">
         <h2>Stages</h2>
         <div id="LAY__Stage_Stage" class="outputLayer --noCursor"></div>
@@ -7,6 +7,6 @@
     </div>
     <div class="Stage__BGMs">
         <h2>Sounds</h2>
-        <div id="LAY__Stage_BGM" class="outputLayer --noCursor"></div>
+        <div id="LAY__Stage_BGM" class="outputLayer"></div>
     </div>
 </section>
