--- a/src/pages/index/_scenes/title.html
+++ b/src/pages/index/_scenes/title.html
@@ -1,9 +1,10 @@
-<section id="CTX__Title" class="outputContext">
-    <h1>
-        DBZ-Versus
-        <span>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</span>
+<section id="CTX__Title" class="outputContext DS-Page">
+    <h1 class="DS-Logo">
+        <b>DBZ</b>
+        <span>Versus</span>
+        <i>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</i>
     </h1>
-    <div class="Title__Information">
+    <div class="DS-Information">
         <h2>This open source project is still under development !</h2>
         <p>
             If you encountered an issue or would like to give me feedback to improve this project,<br/>
@@ -12,10 +13,10 @@
         <p>
             <b>Thank you for playing and have a good game !</b>
         </p>
+        <nav class="Menu__Layer">
+            <ul>
+                <li class="Menu__Button">Press <span class="Helper__Button">ENTER</span>or any gamepad button</li>
+            </ul>
+        </nav>
     </div>
-    <nav class="Menu__Layer">
-        <ul>
-            <li>Press <span class="Helper__Button">ENTER</span>or any gamepad button</li>
-        </ul>
-    </nav>
 </section>
