--- a/src/pages/index/page.html
+++ b/src/pages/index/page.html
@@ -15,7 +15,7 @@
             <b class="Alert__Close">X</b>
             <h1>Oops !</h1>
             <h2>I believe there is an issue ...</h2>
-            <div class="Alert__Information">
+            <div class="DS-Information">
                 <p>
                     Please contact me via <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a> of project,<br/>
                     giving me the context and the following error text&nbsp;:
