--- a/src/pages/index/_scenes/_training/_display.html
+++ b/src/pages/index/_scenes/_training/_display.html
@@ -1,16 +1,6 @@
 <nav id="LAY__Training_Menu_Display" class="outputLayer Menu__Layer Training__Menu Training__Menu_Display">
     <ul>
-        <li>Frame Data</li>
-        <li id="LAY__Training_Menu_Display_Data" class="outputLayer Training__Button">
-            <span>Command details</span>
-            <span class="outputText"></span>
-        </li>
-        <li id="LAY__Training_Menu_Display_Box" class="outputLayer Training__Button">
-            <span>Box visibility</span>
-            <span class="outputText"></span>
-        </li>
-    </ul>
-    <ul>
+        <li class="Menu__Title">Display settings</li>
         <li id="LAY__Training_Menu_Display_Input" class="outputLayer Training__Button">
             <span>Inputs history</span>
             <span class="outputText"></span>
@@ -21,6 +11,17 @@
         </li>
     </ul>
     <ul>
-        <li id="TXT__Training_Menu_Display_Return" class="outputText">Return</li>
+        <li class="Menu__Title">Frame Data</li>
+        <li id="LAY__Training_Menu_Display_Data" class="outputLayer Training__Button">
+            <span>Command details</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Display_Box" class="outputLayer Training__Button">
+            <span>Box visibility</span>
+            <span class="outputText"></span>
+        </li>
+    </ul>
+    <ul>
+        <li id="TXT__Training_Menu_Display_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
