--- a/src/pages/index/_scenes/_training/_dummy.html
+++ b/src/pages/index/_scenes/_training/_dummy.html
@@ -1,5 +1,6 @@
 <nav id="LAY__Training_Menu_Dummy" class="outputLayer Menu__Layer Training__Menu Training__Menu_Dummy">
     <ul>
+        <li class="Menu__Title">Dummy settings</li>
         <li id="LAY__Training_Menu_Dummy_Controller" class="outputLayer Training__Button">
             <span>Controller</span>
             <span class="outputText"></span>
@@ -30,6 +31,6 @@
         </li>
     </ul>
     <ul>
-        <li id="TXT__Training_Menu_Dummy_Return" class="outputText">Return</li>
+        <li id="TXT__Training_Menu_Dummy_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
