--- a/src/pages/index/_scenes/_training/_list.html
+++ b/src/pages/index/_scenes/_training/_list.html
@@ -4,10 +4,10 @@
     </div>
     <div id="LAY__Training_Menu_List_Character_" class="outputLayer Menu__Layer Training__Menu Training__Menu_List_Character">
         <ul class="Training__Menu_List_Character_Command">
-            <li class="Training__Menu_List_Name"></li>
+            <li class="Training__Menu_List_Name Menu__Title"></li>
         </ul>
         <ul>
-            <li id="TXT__Training_Menu_List_Return_" class="outputText --change --outputCreated">Return</li>
+            <li id="TXT__Training_Menu_List_Return_" class="outputText --change --outputCreated Menu__Button">Return</li>
         </ul>
     </div>
     <!-- Pattern COMMAND -->
