--- a/src/pages/index/_scenes/_training/_restart.html
+++ b/src/pages/index/_scenes/_training/_restart.html
@@ -1,5 +1,6 @@
 <nav id="LAY__Training_Menu_Restart" class="outputLayer Menu__Layer Training__Menu Training__Menu_Restart">
     <ul>
+        <li class="Menu__Title">Restart settings</li>
         <li id="LAY__Training_Menu_Restart_Position" class="outputLayer Training__Button">
             <span>Restart position</span>
             <span class="outputText"></span>
@@ -10,7 +11,7 @@
         </li>
     </ul>
     <ul>
-        <li id="TXT__Training_Menu_Restart_Restart" class="outputText">Restart</li>
-        <li id="TXT__Training_Menu_Restart_Return" class="outputText">Return</li>
+        <li id="TXT__Training_Menu_Restart_Restart" class="outputText Menu__Button">Restart</li>
+        <li id="TXT__Training_Menu_Restart_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
