--- a/src/pages/index/_scenes/setting.html
+++ b/src/pages/index/_scenes/setting.html
@@ -1,26 +1,26 @@
-<section id="CTX__Setting" class="outputContext">
-    <h1>Settings</h1>
+<section id="CTX__Setting" class="outputContext DS-Page">
+    <h1 class="DS-Title">Settings</h1>
     <nav id="LAY__Setting" class="outputLayer">
         <ul>
-            <li>Battle</li>
+            <li class="Menu__Title">Battle</li>
             <li id="LAY__Setting_Round" class="outputLayer Setting__Button">
                 <span class="Setting__Round_Name">First to</span>
                 <span class="outputText"></span>
             </li>
         </ul>
         <ul>
-            <li>Input</li>
-            <li id="TXT__Setting_Input" class="outputText">Controller configuration</li>
+            <li class="Menu__Title">Input</li>
+            <li id="TXT__Setting_Input" class="outputText Menu__Button">Controller configuration</li>
         </ul>
         <ul class="Setting__Output">
-            <li>Output</li>
+            <li class="Menu__Title">Output</li>
             <li id="LAY__Setting_Channel_" class="outputLayer Setting__Button">
                 <span class="Setting__Channel_Name"></span>
                 <span class="outputText --change --outputCreated"></span>
             </li>
         </ul>
         <ul>
-            <li id="TXT__Setting_Return" class="outputText --outputCreated">Return</li>
+            <li id="TXT__Setting_Return" class="outputText --outputCreated Menu__Button">Return</li>
         </ul>
     </nav>
 </section>
