Fuse de TITLE et MENU

--- a/src/pages/index/_scenes/menu.html
+++ b/src/pages/index/_scenes/menu.html
@@ -4,6 +4,21 @@
         <span>Versus</span>
         <i>{{ FW.version }}.{{ FW.date }}.{{ FW.time }}</i>
     </h1>
+    <div class="DS-Information">
+        <h2>This open source project is still under development !</h2>
+        <p>
+            If you encountered an issue or would like to give me feedback to improve this project,<br/>
+            please contact me via its <a href="https://github.com/de-sign/DBZ-Versus/issues" target="_blank">Github repository</a>.
+        </p>
+        <p>
+            <b>Thank you for playing and have a good game !</b>
+        </p>
+        <nav class="Menu__Layer">
+            <ul>
+                <li class="Menu__Button">Press <span class="Helper__Button">ENTER</span>or any gamepad button</li>
+            </ul>
+        </nav>
+    </div>
     <nav id="LAY__Menu" class="outputLayer">
         <ul>
             <li class="Menu__Title">Versus</li>
