--- a/src/pages/index/_scenes/_training/_menu.html
+++ b/src/pages/index/_scenes/_training/_menu.html
@@ -1,13 +1,17 @@
 <nav id="LAY__Training_Menu_Principal" class="outputLayer Menu__Layer Training__Menu Training__Menu_Principal">
     <ul>
+        <li class="Menu__Title">Menu</li>
         <li id="TXT__Training_Menu_Settings" class="outputText Menu__Button">Training Settings</li>
+        <li id="TXT__Training_Menu_Restart" class="outputText Menu__Button">Restart</li>
         <li id="TXT__Training_Menu_List" class="outputText Menu__Button">Command list</li>
-        <li id="TXT__Training_Menu_Select" class="outputText Menu__Button">Select character</li>
-        <li id="TXT__Training_Menu_Stage" class="outputText Menu__Button">Select stage</li>
     </ul>
     <ul>
-        <li id="TXT__Training_Menu_Restart" class="outputText Menu__Button">Restart</li>
+        <li class="Menu__Title">Redirection</li>
+        <li id="TXT__Training_Menu_Select" class="outputText Menu__Button">Select character</li>
+        <li id="TXT__Training_Menu_Stage" class="outputText Menu__Button">Select stage</li>
         <li id="TXT__Training_Menu_Quit" class="outputText Menu__Button">Main menu</li>
-        <li id="TXT__Training_Menu_Continue" class="outputText Menu__Button">Continue</li>
+    </ul>
+    <ul>
+        <li id="TXT__Training_Menu_Continue" class="outputText Menu__Button">Close</li>
     </ul>
 </nav>
