--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -36,9 +36,11 @@
                 <nav id="LAY__Battle_Menu" class="outputLayer Menu__Layer Battle__Menu_Principal">
                     <ul>
                         <li id="TXT__Battle_Menu_Rematch" class="outputText Menu__Button">Rematch</li>
+                        
+                        <li class="Menu__Title">Redirection</li>
                         <li id="TXT__Battle_Menu_Select" class="outputText Menu__Button">Select character</li>
                         <li id="TXT__Battle_Menu_Stage" class="outputText Menu__Button">Select stage</li>
-                        <li id="TXT__Battle_Menu_Quit" class="outputText Menu__Button">Quit</li>
+                        <li id="TXT__Battle_Menu_Quit" class=" outputText Menu__Button">Main menu</li>
                     </ul>
                 </nav>
                 {% for fw_training in FW.content.training %}
