Affichage COMMAND LIST via des groupes

--- a/src/pages/index/_scenes/select.html
+++ b/src/pages/index/_scenes/select.html
@@ -2,7 +2,7 @@
     <h1 id="TXT__Select_Name" class="outputText DS-Title">Select</h1>
     <div class="Select__Players">
         <div id="LAY__Select_Player_" class="outputLayer Select__Player">
-            <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" height="200" width="200"/>
+            <img id="SPT__Select_Character_" class="outputSprite --change Select__Player_Character_Sprite" height="200" width="200" src="assets/images/characters/GKU/CTM_TRN/stand_0.png" />
             <h2 id="TXT__Select_Character_" class="outputText --change Select__Player_Character_Name">Character <i>Color</i></h2>
             <h3 id="TXT__Select_Player_" class="outputText --change Select__Player_Number">Player #</h3>
         </div>
