BUG avec ajou du BTN D

--- a/src/pages/index/_scenes/input.html
+++ b/src/pages/index/_scenes/input.html
@@ -6,6 +6,7 @@
             <h2 class="Input__Controller_Number"></h2>
             <ul class="Input__Buttons"></ul>
             <ul class="Input__Actions">
+                <!--<li id="TXT__Input_Reset_" class="outputText --change Menu__Button">Reset</li>-->
                 <li id="TXT__Input_Return_" class="outputText --change Menu__Button">Return</li>
             </ul>
         </div>
