Nouvelle gestion des positions Gestion des COUNTER Direction des MOVEMENTS après le DELAY Revue des LINK ENTITY Gestion du DAMAGE SCALING Revue du DATA DAMAGE en TRAINING

--- a/src/pages/index/_scenes/_training/_data.html
+++ b/src/pages/index/_scenes/_training/_data.html
@@ -9,6 +9,10 @@
                 <span>Frames</span>
                 <span class="outputText --change"></span>
             </li>
+            <li class="Training__Data_Info">
+                <span>Entity</span>
+                <span class="outputText --change"></span>
+            </li>
             <li  class="Training__Data_Info">
                 <span>Advantage</span>
                 <span class="outputText --change"></span>
