Gestion des EFFECTS via DISPLAY ENGINE Revue de la COMMAND LIST Diminution de POSITION BOX du AIRDASH Ajout du FAVICON

--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -59,7 +59,7 @@
     </div>
 
     <div id="LAY__Battle_Area" class="outputLayer Battle__Area">
-        <div id="LAY__Battle_Area_Wrapper" class="outputLayer Battle__Area_Wrapper"></div>
+        <div id="LAY__Battle_Area_Wrapper" class="outputLayer Battle__Area_Wrapper">
             <div id="LAY__Battle_Entity_" class="outputLayer Battle__Entity">
                 <img id="SPT__Battle_Entity_Sprite_" class="outputSprite --change Battle__Entity_Sprite" />
                 <div id="LAY__Training_HurtBox_" class="outputLayer --change Training__Box Training__HurtBox"></div>
