--- a/src/pages/index/_scenes/_training/_list.html
+++ b/src/pages/index/_scenes/_training/_list.html
@@ -1,19 +1,22 @@
 <nav id="LAY__Training_Menu_List" class="outputLayer Menu__Layer Training__Menu Training__Menu_List">
-    <div class="Training__Menu_List_Sprite" >
-        <img id="SPT__Training_Menu_List" class="outputSprite" />
-    </div>
-    <div id="LAY__Training_Menu_List_Character_" class="outputLayer Menu__Layer Training__Menu Training__Menu_List_Character">
-        <ul class="Training__Menu_List_Character_Command">
-            <li class="Training__Menu_List_Name Menu__Title"></li>
+    <div id="LAY__Training_Menu_List_Menu" class="outputLayer Menu__Layer Training__Menu Training__Menu_List_Menu" >
+        <ul>
+            <li class="Menu__Title">Command List</li>
+            <li class="outputText">Universals</li>
+            <li id="TXT__Training_Menu_List_Menu_1" class="outputText">Player #1</li>
+            <li id="TXT__Training_Menu_List_Menu_2" class="outputText">Player #2</li>
         </ul>
         <ul>
-            <li id="TXT__Training_Menu_List_Return_" class="outputText --change --outputCreated Menu__Button">Return</li>
+            <li id="TXT__Training_Menu_List_Return" class="outputText Menu__Button">Return</li>
         </ul>
+    </div>
+    <div id="LAY__Training_Menu_List_Character_" class="outputLayer Menu__Layer Training__Menu Training__Menu_List_Character">
+        <ul class="Training__Menu_List_Character_Command"></ul>
     </div>
     <!-- Pattern COMMAND -->
     <li id="LAY__Training_Menu_List_Command_" class="outputLayer Training__Button">
         <span class="Training__Button_Label Training__Menu_List_Command"></span>
-        <span class="Training__Button_Option Training__Menu_List_Button"></span>
         <span class="Training__Button_Option Training__Menu_List_Ki"></span>
+        <span class="Training__Button_Option Training__Menu_List_Button"></span>
     </li>
 </nav>
