Nouveau HUD pour KI Ajout COMBO MAX en TRAINING

--- a/src/pages/index/_scenes/_training/_data.html
+++ b/src/pages/index/_scenes/_training/_data.html
@@ -5,6 +5,10 @@
                 <span>Damages</span>
                 <span class="outputText --change"></span>
             </li>
+            <li class="Training__Data_Info">
+                <span>Combo</span>
+                <span class="outputText --change"></span>
+            </li>
             <li  class="Training__Data_Info">
                 <span>Frames</span>
                 <span class="outputText --change"></span>
