--- a/src/pages/index/_scenes/battle.html
+++ b/src/pages/index/_scenes/battle.html
@@ -24,6 +24,18 @@
                         <div id="LAY__Battle_HUD_Ki_" class="outputLayer --change Battle__HUD_Character_Ki">
                             <div id="TXT__Battle_HUD_Ki_Number_" class="outputText --change Battle__HUD_Ki_Number"></div>
                             <div id="LAY__Battle_HUD_Ki_Bar_" class="outputLayer --change Battle__HUD_Ki_Bar"></div>
+                            <div id="LAY__Battle_HUD_Ki_Icon_" class="outputLayer --change Battle__HUD_Ki_Icon">
+                                <span class="Battle__HUD_Ki_Icon_Bar"></span>
+                                <span class="Battle__HUD_Ki_Icon_3">
+                                    <img src="assets/images/ki/icon_3.png" />
+                                </span>
+                                <span class="Battle__HUD_Ki_Icon_2">
+                                    <img src="assets/images/ki/icon_2.png" />
+                                </span>
+                                <span class="Battle__HUD_Ki_Icon_1">
+                                    <img src="assets/images/ki/icon_1.png" />
+                                </span>
+                            </div>
                         </div>
                     </div>
                     <img id="SPT__Battle_HUD_Sprite_" class="outputSprite --change Battle__HUD_Sprite" />
