Gestion du RESET dans MENU TRAINING

--- a/src/pages/index/_scenes/_training/_display.html
+++ b/src/pages/index/_scenes/_training/_display.html
@@ -22,6 +22,7 @@
         </li>
     </ul>
     <ul>
+        <li id="TXT__Training_Menu_Display_Reset" class="outputText Menu__Button">Reset</li>
         <li id="TXT__Training_Menu_Display_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
