--- a/src/pages/index/_scenes/_training/_dummy.html
+++ b/src/pages/index/_scenes/_training/_dummy.html
@@ -17,12 +17,12 @@
             <span>Tech throw</span>
             <span class="outputText"></span>
         </li>
-        <li id="LAY__Training_Menu_Dummy_Counter" class="outputLayer Training__Button">
-            <span>Counter</span>
-            <span class="outputText"></span>
-        </li>
         <li id="LAY__Training_Menu_Dummy_Reversal" class="outputLayer Training__Button">
             <span>Reversal</span>
+            <span class="outputText"></span>
+        </li>
+        <li id="LAY__Training_Menu_Dummy_Recovery" class="outputLayer Training__Button">
+            <span>Recovery</span>
             <span class="outputText"></span>
         </li>
         <li id="LAY__Training_Menu_Dummy_Record" class="outputLayer Training__Button">
@@ -31,6 +31,7 @@
         </li>
     </ul>
     <ul>
+        <li id="TXT__Training_Menu_Dummy_Reset" class="outputText Menu__Button">Reset</li>
         <li id="TXT__Training_Menu_Dummy_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
