--- a/src/pages/index/_scenes/_training/_gauges.html
+++ b/src/pages/index/_scenes/_training/_gauges.html
@@ -22,6 +22,7 @@
         </li>
     </ul>
     <ul class="Training__Menu_Gauges_Return">
+        <li id="TXT__Training_Menu_Gauges_Reset" class="outputText --uncreate --outputCreated Menu__Button">Reset</li>
         <li id="TXT__Training_Menu_Gauges_Return" class="outputText --uncreate --outputCreated Menu__Button">Return</li>
     </ul>
 </nav>
