--- a/src/pages/index/_scenes/_training/_restart.html
+++ b/src/pages/index/_scenes/_training/_restart.html
@@ -12,6 +12,9 @@
     </ul>
     <ul>
         <li id="TXT__Training_Menu_Restart_Restart" class="outputText Menu__Button">Restart</li>
+    </ul>
+    <ul>
+        <li id="TXT__Training_Menu_Restart_Reset" class="outputText Menu__Button">Reset</li>
         <li id="TXT__Training_Menu_Restart_Return" class="outputText Menu__Button">Return</li>
     </ul>
 </nav>
