Gestion COUNTER dans TRAINING Gestion 5 slot de RECORDS dans TRAINING

--- a/src/pages/index/_scenes/_training/_settings.html
+++ b/src/pages/index/_scenes/_training/_settings.html
@@ -1,8 +1,15 @@
 <nav id="LAY__Training_Menu_Settings" class="outputLayer Menu__Layer Training__Menu Training__Menu_Settings">
     <ul>
         <li class="Menu__Title">Training settings</li>
+    </ul>
+    <ul>
+        <li class="Menu__Title">Dummy</li>
+        <li id="TXT__Training_Menu_Settings_Opponent" class="outputText Menu__Button">Opponent Settings</li>
+        <li id="TXT__Training_Menu_Settings_Records" class="outputText Menu__Button">Records Settings</li>
+    </ul>
+    <ul>
+        <li class="Menu__Title">Miscellaneous</li>
         <li id="TXT__Training_Menu_Settings_Gauges" class="outputText Menu__Button">Gauges Settings</li>
-        <li id="TXT__Training_Menu_Settings_Dummy" class="outputText Menu__Button">Dummy Settings</li>
         <li id="TXT__Training_Menu_Settings_Restart" class="outputText Menu__Button">Restart Settings</li>
         <li id="TXT__Training_Menu_Settings_Display" class="outputText Menu__Button">Display Settings</li>
     </ul>
