Gestion des options REVERSALS

--- a/src/pages/index/_scenes/_training/_settings.html
+++ b/src/pages/index/_scenes/_training/_settings.html
@@ -6,6 +6,7 @@
         <li class="Menu__Title">Dummy</li>
         <li id="TXT__Training_Menu_Settings_Opponent" class="outputText Menu__Button">Opponent Settings</li>
         <li id="TXT__Training_Menu_Settings_Records" class="outputText Menu__Button">Records Settings</li>
+        <li id="TXT__Training_Menu_Settings_Reversals" class="outputText Menu__Button">Reversals Settings</li>
     </ul>
     <ul>
         <li class="Menu__Title">Miscellaneous</li>
