Gestion Buffer Image pour DEV Gestion LAYOUT de BUTTON des INPUT

--- a/src/pages/index/_scenes/setting.html
+++ b/src/pages/index/_scenes/setting.html
@@ -8,9 +8,9 @@
                 <span class="outputText"></span>
             </li>
         </ul>
-        <ul>
+        <ul class="Setting__Input">
             <li class="Menu__Title">Input</li>
-            <li id="TXT__Setting_Input" class="outputText Menu__Button">Controller configuration</li>
+            <li id="TXT__Setting_Input_" class="outputText Menu__Button"></li>
         </ul>
         <ul class="Setting__Output">
             <li class="Menu__Title">Output</li>
