--- a/src/pages/index/_scenes/input.html
+++ b/src/pages/index/_scenes/input.html
@@ -1,13 +1,14 @@
 <section id="CTX__Input" class="outputContext DS-Page">
-    <h1 class="DS-Title">Controller configuration</h1>
+    <h1 id="TXT__Input_Name" class="outputText DS-Title">Controller configuration</h1>
     <div class="Input__Controllers">
         <div id="LAY__Input_Controller_" class="outputLayer Input__Controller">
             <img class="Input__Controller_Sprite" />
             <h2 class="Input__Controller_Number"></h2>
+        </div>
+        <div id="LAY__Input_Layout_" class="outputLayer Input__Layout --hide">
             <ul class="Input__Buttons"></ul>
             <ul class="Input__Actions">
-                <!--<li id="TXT__Input_Reset_" class="outputText --change Menu__Button">Reset</li>-->
-                <li id="TXT__Input_Return_" class="outputText --change Menu__Button">Return</li>
+                <li id="TXT__Input_Return_" class="outputText --change --outputCreated Menu__Button">Return</li>
             </ul>
         </div>
         <li id="LAY__Input_Button_" class="outputLayer Input__Button">
